updated meta information

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yanni Lefki — Doctorant en Informatique</title>
+  <meta name="description" content="Personal website of Yanni Lefki, PhD student in Computer Science. Research on compilation, optimization, and high-performance computing.">
+  <meta name="keywords" content="Yanni Lefki, compilation, OCaml, optimization, research, PhD, computer science, OptiTrust, Arthur Charguéraud, INRIA, high-performance computing, HPC">
+  <meta name="author" content="Yanni Lefki">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://yannilefki.github.io/">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
   <title>Yanni Lefki</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
