--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yanni Lefki — Doctorant en Informatique</title>
+  <title>Yanni Lefki — PhD Student</title>
   <meta name="description" content="Personal website of Yanni Lefki, PhD student in Computer Science. Research on compilation, optimization, and high-performance computing.">
   <meta name="keywords" content="Yanni Lefki, compilation, OCaml, optimization, research, PhD, computer science, OptiTrust, Arthur Charguéraud, INRIA, high-performance computing, HPC">
   <meta name="author" content="Yanni Lefki">
