ajouté balise html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Yanni Lefki — PhD Student</title>
   <meta name="description" content="Personal website of Yanni Lefki, PhD student in Computer Science. Research on compilation, optimization, and high-performance computing.">
   <meta name="keywords" content="Yanni Lefki, compilation, OCaml, optimization, research, PhD, computer science, OptiTrust, Arthur Charguéraud, INRIA, high-performance computing, HPC">
+  <meta name="google-site-verification" content="Wwp-Sow_SVqtDB_XqocvhN4JRufA6wFr211fw7vVMyM" />
   <meta name="author" content="Yanni Lefki">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://yannilefki.github.io/">
