--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta name="google-site-verification" content="Wwp-Sow_SVqtDB_XqocvhN4JRufA6wFr211fw7vVMyM">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Publications — Yanni Lefki</title>
